--- a/app/ui/FutureScenariosPage/SlidersAbout/SlidersAbout.css
+++ b/app/ui/FutureScenariosPage/SlidersAbout/SlidersAbout.css
@@ -1,9 +1,9 @@
 .sliders-about {
   background: var(--color-lightgray);
   font-size: 14px;
-  padding: 6px 30px;
+  padding: 11px 30px;
   text-align: center;
   @media (width >= 1024px) {
-    padding: 10px;
+    padding: 11px;
   }
 }
